--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Sekatalala Bakery</title>
-	<link rel="icon" href="pexels-marina-m-8356208.jpg">
+	<link rel="icon" href="images\pexels-marina-m-8356208.jpg">
 </head> 
 <body>
 	<h1>Welcome to the Sekatalala~MiniBakery!</h1>
@@ -14,6 +14,16 @@
 	<h2>Our Specialties</h2>
 	<p>At Sekatalala~MiniBakery, we specialize in a variety of baked goods, including cakes, pastries, and artisan bread.</p>
 	<p>Each item is made with love and attention to detail, using the finest ingredients.</p>
+	
+	<h3>Cakes</h3>
+	<img src="images/pexels-eiliv-aceron-10311435.jpg" alt="Cake" width="480" height="480">
+	  
+	<h3>Pastries</h3>
+	<img src="images/pexels-pixabay-267308.jpg" alt="Pastry" width="480" height="480">
+	  
+	<h3>Artisan Bread</h3>
+	<img src="images/pexels-marta-dzedyshko-7693946.jpg" alt="Artisan Bread" width="480" height="480">
+
 
 	<h2>Contact Us</h2>
 	<p>If you have any questions or would like to place an order, feel free to reach out to us. We'd love to hear from you!</p>
