--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Sekatalala Bakery</title>
-	<link rel="icon" href="images\pexels-marina-m-8356208.jpg">
+	<link rel="icon" href="images/pexels-marina-m-8356208.jpg">
 </head> 
 <body>
 	<h1>Welcome to the Sekatalala~MiniBakery!</h1>
