--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Sekatalala Bakery</title>
-	<link rel="icon" href="images/pexels-marina-m-8356208.jpg">
+	<link rel="icon" href="images\pexels-marina-m-8356208.jpg">
 </head> 
 <body>
 	<h1>Welcome to the Sekatalala~MiniBakery!</h1>
@@ -23,6 +23,9 @@
 	  
 	<h3>Artisan Bread</h3>
 	<img src="images/pexels-marta-dzedyshko-7693946.jpg" alt="Artisan Bread" width="480" height="480">
+	
+	<h2>Visit Our Other Pages</h2>
+	<a href="New Page.html">Visit Our New Page</a>
 
 
 	<h2>Contact Us</h2>
