--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Sekatalala Bakery</title>
-	<link rel="icon" href="images\pexels-marina-m-8356208.jpg">
+	<link rel="icon" href="images/pexels-marina-m-8356208.jpg">
 </head> 
 <body>
 	<h1>Welcome to the Sekatalala~MiniBakery!</h1>
@@ -25,7 +25,7 @@
 	<img src="images/pexels-marta-dzedyshko-7693946.jpg" alt="Artisan Bread" width="480" height="480">
 	
 	<h2>Visit Our Other Pages</h2>
-	<a href="New Page.html">Visit Our New Page</a>
+	<p><a href="NewPage.html">Visit Our New Page</a></p>
 
 
 	<h2>Contact Us</h2>
