--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title> Sekatalala Bakery</title>
 	<link rel="icon" href="images/pexels-marina-m-8356208.jpg">
+	<link rel="stylesheet" href="styles.css">
 </head> 
 <body>
 	<h1>Welcome to the Sekatalala~MiniBakery!</h1>
